--- a/tabelaDeHorarios/styles.css
+++ b/tabelaDeHorarios/styles.css
@@ -1,13 +1,69 @@
+body {
+        margin: 0;
+        display: flex;
+        justify-content: center;
+        align-items: center;
+        height: 100vh;
+        background-color: black;
+        flex-direction: column;
+        background: url('/imgs/Facebook.jpg');
+        background-size: cover;
+        background-repeat: no-repeat;
+        background-position: center center;
+        font-family: Arial, Helvetica, sans-serif;
+    }
+
+    #container {
+        width: 350px;
+        
+        height: 300px;
+        border: 2px solid white;
+        display: flex;
+        flex-direction: column;
+        align-items: center;
+        padding: 0px;
+        box-sizing: border-box;
+        border-radius: 20px;
+        background: black;
+        opacity: .8;
+        
+    }
+
+    #horario {
+        font-size: 20px;
+        margin-bottom: 0px;
+        margin: auto
+    }
+
+    .horario {
+        color: white;
+        font-size: 20px;
+    }
+
+    .passado {
+        color: green;
+        font-size: 20px;
+    }
+
+    #ultimaAtualizacao {
+        font-size: 18px;
+        margin-top: 20px;
+    }
+
+
+
 .container {
   text-align: center;
 }
 
 #horarios {
-  width: 330px;
-  height: 300px;
-  border: 2px solid #000;
+  width: 300px;
+  height: 380px;
   border-radius: 10px;
   padding: 20px;
+  text-align: center;
+}
+#horarios span{
 }
 
 #horarios-container{
@@ -35,7 +91,7 @@
 .segmento {
   width: calc(100% / 5); /* Divide a coluna em 5 partes */
   height: 100%;
-  float: left; /* Faz com que os segmentos fiquem um ao lado do outro */
+  float: right; /* Faz com que os segmentos fiquem um ao lado do outro */
   border-right: 1px solid #000;
 }
 
@@ -51,4 +107,637 @@
 
 .verde {
   color: green;
+}
+
+
+#img{
+  
+}
+#img img{
+  width: 50px;
+}
+
+
+.cabecalho{
+ min-width: 350px;
+ max-width: 90vw;
+ height: 170px;
+ display: flex;
+ justify-content: center;
+ align-items: center;
+ flex-direction: column;
+ border-radius: 10px;
+ background: #04BFBF;
+ margin: auto;
+ margin-top: 0;
+ margin-bottom: 0;
+ 
+}
+.cabecalho .links{
+ 
+ margin-top: 30px;
+ 
+ 
+}
+.cabecalho .links a{
+  margin: 20px;
+  flex-direction: row;
+  text-decoration: none;
+  color: white;
+}
+.cabecalho Logo1 div{
+ margin: auto;
+ 
+  
+}
+.cabecalho img{
+  width: 110px;
+  border-radius: 50%;
+  border: 1px solid darkred;
+}
+
+@media screen and (min-width: 450px) and (max-width: 550px) {
+  
+ .cabecalho{
+ min-width: 90vw;
+ max-width: 900px;
+ height: 320px;
+ display: flex;
+ justify-content: center;
+ align-items: center;
+ flex-direction: column;
+ border-radius: 10px;
+ background: #04BFBF;
+ margin: auto;
+ margin-top: 0;
+ margin-bottom: 0;
+ 
+}
+.cabecalho .links{
+ 
+ margin-top: 30px;
+ 
+ 
+}
+.cabecalho .links a{
+  margin: 20px;
+  flex-direction: row;
+  text-decoration: none;
+  color: white;
+  font-size: 24px;
+}
+.cabecalho Logo1 div{
+ margin: auto;
+ 
+  
+}
+.cabecalho img{
+  width: 160px;
+  border-radius: 50%;
+  border: 1px solid darkred;
+}
+ #container{
+        width: 470px;
+        height: 450px;
+        border: 2px solid white;
+        display: flex;
+        flex-direction: column;
+        align-items: center;
+        padding: 0px;
+        box-sizing: border-box;
+        border-radius: 20px;
+        background: black;
+        opacity: .8;
+        
+    }
+
+    #horario {
+        font-size: 25px;
+        margin-bottom: 0px;
+        margin: auto;
+        color: white;
+        margin-top: 10px;
+    }
+
+    .horario {
+        color: white;
+        font-size: 25px;
+        margin: 5px;
+        padding: 1px;
+    }
+
+    .passado {
+        color: green;
+        font-size: 25px;
+        margin: 5px;
+        padding: 1px;
+    }
+
+    #ultimaAtualizacao {
+        font-size: 20px;
+        margin-top: 20px;
+        color: pink;
+        
+    }
+
+
+
+.container {
+  text-align: center;
+}
+
+#horarios {
+  width: 490px;
+  height: 380px;
+  border-radius: 10px;
+  padding: 20px;
+  text-align: center;
+}
+}
+@media screen and (min-width: 550px) and (max-width: 650px) {
+.cabecalho{
+ min-width: 90vw;
+ max-width: 900px;
+ height: 320px;
+ display: flex;
+ justify-content: center;
+ align-items: center;
+ flex-direction: column;
+ border-radius: 10px;
+ background: #04BFBF;
+ margin: auto;
+ margin-top: 0;
+ margin-bottom: 0;
+ 
+}
+.cabecalho .links{
+ 
+ margin-top: 30px;
+ 
+ 
+}
+.cabecalho .links a{
+  margin: 20px;
+  flex-direction: row;
+  text-decoration: none;
+  color: white;
+  font-size: 28px;
+}
+.cabecalho Logo1 div{
+ margin: auto;
+ 
+  
+}
+.cabecalho img{
+  width: 180px;
+  border-radius: 50%;
+  border: 1px solid darkred;
+}
+ #container{
+        width: 490px;
+        height: 450px;
+        border: 2px solid white;
+        display: flex;
+        flex-direction: column;
+        align-items: center;
+        padding: 0px;
+        box-sizing: border-box;
+        border-radius: 20px;
+        background: black;
+        opacity: .8;
+        
+    }
+
+    #horario {
+        font-size: 28px;
+        margin-bottom: 0px;
+        margin: auto;
+        color: white;
+        margin-top: 10px;
+    }
+
+    .horario {
+        color: white;
+        font-size: 28px;
+        margin: 5px;
+        padding: 1px;
+    }
+
+    .passado {
+        color: green;
+        font-size: 28px;
+        margin: 5px;
+        padding: 1px;
+    }
+
+    #ultimaAtualizacao {
+        font-size: 20px;
+        margin-top: 20px;
+        color: pink;
+        
+    }
+
+
+
+.container {
+  text-align: center;
+}
+
+#horarios {
+  width: 500px;
+  height: 380px;
+  border-radius: 10px;
+  padding: 20px;
+  text-align: center;
+}
+}
+@media screen and (min-width: 650px) and (max-width: 750px) {
+.cabecalho{
+ min-width: 90vw;
+ max-width: 900px;
+ height: 320px;
+ display: flex;
+ justify-content: center;
+ align-items: center;
+ flex-direction: column;
+ border-radius: 10px;
+ background: #04BFBF;
+ margin: auto;
+ margin-top: 0;
+ margin-bottom: 0;
+ 
+}
+.cabecalho .links{
+ 
+ margin-top: 30px;
+ 
+ 
+}
+.cabecalho .links a{
+  margin: 20px;
+  flex-direction: row;
+  text-decoration: none;
+  color: white;
+  font-size: 30px;
+}
+.cabecalho Logo1 div{
+ margin: auto;
+ 
+  
+}
+.cabecalho img{
+  width: 200px;
+  border-radius: 50%;
+  border: 1px solid darkred;
+}
+ #container{
+        width: 520px;
+        height: 450px;
+        border: 2px solid white;
+        display: flex;
+        flex-direction: column;
+        align-items: center;
+        padding: 0px;
+        box-sizing: border-box;
+        border-radius: 20px;
+        background: black;
+        opacity: .8;
+        
+    }
+
+    #horario {
+        font-size: 30px;
+        margin-bottom: 0px;
+        margin: auto;
+        color: white;
+        margin-top: 10px;
+    }
+
+    .horario {
+        color: white;
+        font-size: 30px;
+        margin: 5px;
+        padding: 1px;
+    }
+
+    .passado {
+        color: green;
+        font-size: 30px;
+        margin: 5px;
+        padding: 1px;
+    }
+
+    #ultimaAtualizacao {
+        font-size: 20px;
+        margin-top: 20px;
+        color: pink;
+        
+    }
+
+
+
+.container {
+  text-align: center;
+}
+
+#horarios {
+  width: 510px;
+  height: 380px;
+  border-radius: 10px;
+  padding: 20px;
+  text-align: center;
+}
+}
+
+@media screen and (min-width: 750px) and (max-width: 850px) {
+.cabecalho{
+ min-width: 90vw;
+ max-width: 900px;
+ height: 320px;
+ display: flex;
+ justify-content: center;
+ align-items: center;
+ flex-direction: column;
+ border-radius: 10px;
+ background: #04BFBF;
+ margin: auto;
+ margin-top: 0;
+ margin-bottom: 0;
+ 
+}
+.cabecalho .links{
+ 
+ margin-top: 30px;
+ 
+ 
+}
+.cabecalho .links a{
+  margin: 20px;
+  flex-direction: row;
+  text-decoration: none;
+  color: white;
+  font-size: 37px;
+}
+.cabecalho Logo1 div{
+ margin: auto;
+ 
+  
+}
+.cabecalho img{
+  width: 220px;
+  border-radius: 50%;
+  border: 1px solid darkred;
+}
+ #container{
+        width: 550px;
+        height: 450px;
+        border: 2px solid white;
+        display: flex;
+        flex-direction: column;
+        align-items: center;
+        padding: 0px;
+        box-sizing: border-box;
+        border-radius: 20px;
+        background: black;
+        opacity: .8;
+        
+    }
+
+    #horario {
+        font-size: 34px;
+        margin-bottom: 0px;
+        margin: auto;
+        color: white;
+        margin-top: 10px;
+    }
+
+    .horario {
+        color: white;
+        font-size: 34px;
+        margin: 5px;
+        padding: 1px;
+    }
+
+    .passado {
+        color: green;
+        font-size: 34px;
+        margin: 5px;
+        padding: 1px;
+    }
+
+    #ultimaAtualizacao {
+        font-size: 20px;
+        margin-top: 20px;
+        color: pink;
+        
+    }
+
+
+
+.container {
+  text-align: center;
+}
+
+#horarios {
+  width: 530px;
+  height: 380px;
+  border-radius: 10px;
+  padding: 20px;
+  text-align: center;
+}
+}
+
+@media screen and (min-width: 850px) and (max-width: 950px) {
+.cabecalho{
+ min-width: 90vw;
+ max-width: 900px;
+ height: 340px;
+ display: flex;
+ justify-content: center;
+ align-items: center;
+ flex-direction: column;
+ border-radius: 10px;
+ background: #04BFBF;
+ margin: auto;
+ margin-top: 0;
+ margin-bottom: 0;
+ 
+}
+.cabecalho .links{
+ 
+ margin-top: 30px;
+ 
+ 
+}
+.cabecalho .links a{
+  margin: 20px;
+  flex-direction: row;
+  text-decoration: none;
+  color: white;
+  font-size: 37px;
+}
+.cabecalho Logo1 div{
+ margin: auto;
+ 
+  
+}
+.cabecalho img{
+  width: 250px;
+  border-radius: 50%;
+  border: 1px solid darkred;
+}
+ #container{
+        width: 580px;
+        height: 450px;
+        border: 2px solid white;
+        display: flex;
+        flex-direction: column;
+        align-items: center;
+        padding: 0px;
+        box-sizing: border-box;
+        border-radius: 20px;
+        background: black;
+        opacity: .8;
+        
+    }
+
+    #horario {
+        font-size: 37px;
+        margin-bottom: 0px;
+        margin: auto;
+        color: white;
+        margin-top: 10px;
+    }
+
+    .horario {
+        color: white;
+        font-size: 37px;
+        margin: 5px;
+        padding: 1px;
+    }
+
+    .passado {
+        color: green;
+        font-size: 37px;
+        margin: 5px;
+        padding: 1px;
+    }
+
+    #ultimaAtualizacao {
+        font-size: 20px;
+        margin-top: 20px;
+        color: pink;
+        
+    }
+
+
+
+.container {
+  text-align: center;
+}
+
+#horarios {
+  width: 550px;
+  height: 380px;
+  border-radius: 10px;
+  padding: 20px;
+  text-align: center;
+}
+}
+@media screen and (min-width: 950px) and (max-width: 1024px) {
+ .cabecalho{
+ min-width: 90vw;
+ max-width: 900px;
+ height: 340px;
+ display: flex;
+ justify-content: center;
+ align-items: center;
+ flex-direction: column;
+ border-radius: 10px;
+ background: #04BFBF;
+ margin: auto;
+ margin-top: 0;
+ margin-bottom: 0;
+ 
+}
+.cabecalho .links{
+ 
+ margin-top: 30px;
+ 
+ 
+}
+.cabecalho .links a{
+  margin: 20px;
+  flex-direction: row;
+  text-decoration: none;
+  color: white;
+  font-size: 37px;
+}
+.cabecalho Logo1 div{
+ margin: auto;
+ 
+  
+}
+.cabecalho img{
+  width: 250px;
+  border-radius: 50%;
+  border: 1px solid darkred;
+}
+ #container{
+        width: 580px;
+        height: 450px;
+        border: 2px solid white;
+        display: flex;
+        flex-direction: column;
+        align-items: center;
+        padding: 0px;
+        box-sizing: border-box;
+        border-radius: 20px;
+        background: black;
+        opacity: .8;
+        
+    }
+
+    #horario {
+        font-size: 37px;
+        margin-bottom: 0px;
+        margin: auto;
+        color: white;
+        margin-top: 10px;
+    }
+
+    .horario {
+        color: white;
+        font-size: 37px;
+        margin: 5px;
+        padding: 1px;
+    }
+
+    .passado {
+        color: green;
+        font-size: 37px;
+        margin: 5px;
+        padding: 1px;
+    }
+
+    #ultimaAtualizacao {
+        font-size: 20px;
+        margin-top: 20px;
+        color: pink;
+        
+    }
+
+
+
+.container {
+  text-align: center;
+}
+
+#horarios {
+  width: 550px;
+  height: 380px;
+  border-radius: 10px;
+  padding: 20px;
+  text-align: center;
+}
 }
