--- a/GerarCasa/styles.css
+++ b/GerarCasa/styles.css
@@ -15,7 +15,7 @@ body {
 
 .container {
     text-align: center;
-    background: black;
+    background: rgba(0, 0, 0, 0.7);
     padding: 20px;
     border-radius: 8px;
     box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
@@ -67,7 +67,7 @@ input[type="password"], input[type="text"] {
     align-items: center;
     text-align: center;
     padding: 20px;
-    background-color: black;
+    background-color: rgba(0, 0, 0, 0.7);
     box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
 }
 
