--- a/Style.css
+++ b/Style.css
@@ -261,7 +261,7 @@ body,html{
   }
   
     .gallery {
-     background: black;
+     background: rgba(0, 0, 0, 0.5);
       justify-content: space-between;
       margin: auto;
       min-width: 330px;
@@ -1032,7 +1032,7 @@ span{
     align-items: center;
     text-align: center;
     padding: 20px;
-    background-color: black;
+    background-color: rgba(0, 0, 0, 0.7);
     box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
 }
 h1{
