--- a/tabelaDeHorarios/styles.css
+++ b/tabelaDeHorarios/styles.css
@@ -26,7 +26,7 @@ body {
         padding: 0px;
         box-sizing: border-box;
         border-radius: 20px;
-        background: black;
+        background: rgba(0, 0, 0, 0.9);
         opacity: .8;
         margin-top: 10px;
     }
@@ -34,7 +34,9 @@ body {
     #horario {
         font-size: 20px;
         margin-bottom: 0px;
-        margin: auto
+        margin: auto;
+        color: white;
+        padding-top: 10px;
     }
 
     .horario {
@@ -64,6 +66,7 @@ body {
   border-radius: 10px;
   padding: 20px;
   text-align: center;
+  
 }
 #horarios span{
 }
@@ -126,7 +129,7 @@ body {
     align-items: center;
     text-align: center;
     padding: 20px;
-    background-color: black;
+    background-color: rgba(0, 0, 0, 0.7);
     box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
 }
 h1{
